Changes as requested

--- a/FizzBuzz/FizzBuzz.Web/Views/FizzBuzz/Index.cshtml
+++ b/FizzBuzz/FizzBuzz.Web/Views/FizzBuzz/Index.cshtml
@@ -14,7 +14,7 @@
     </div>
 
     <div class="row">
-        <input type="submit" class="btn btn-default" value="Get Numbers" />
+        <input type="submit" class="btn btn-default" value="Show FizzBuzz List" />
     </div>
 
 </form>
